force-app/main/default/objects/Lead_Conversion__c/Lead_Conversion__c.object-meta.xml
<CustomObject>
    <description>Custom object to track and expose Converted Leads</description>
    <label>Lead Conversion</label>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>Lead Conversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads Conversion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>