force-app/main/default/objects/Lead_Conversion__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Value present if Opportunity created during Lead conversion.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads Conversion</relationshipLabel>
    <relationshipName>Leads_Conversion</relationshipName>
    <type>Lookup</type>
</CustomField>